# harbor-interview

./: .gitignore  README.md  docker-compose.yml  index.html  package.json
assets/: index-CTGwwD01.css  index-CcPoe08G.es-BAxkT-f8.js  index-CjFgjkDR.css  index-Dx0HPtUj.es-CBBRWU1p.js  index-VfVc4_l3.js  url-CG6tK4DD.es-BItu9J6I.js  url-CG6tK4DD.es-DVLKTeL7.js
docs/assets/: index-BP0eHH2Y.js  index-CcPoe08G.es-C2SVRsY2.js
notes/: notes.MD
sample_data/: Large Doc.docx  LargerDoc.docx  Sample_Work_Contract.docx  Test dates(2).docx  Test dates.docx
scripts/: generate_openapi.py  generate_types.sh
src/: README.md  pyproject.toml
src/backend/: Dockerfile  main.py  models.py  pyproject.toml
src/frontend/: Dockerfile  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
src/frontend/docs/: index.html
src/frontend/docs/assets/: index-Dx0HPtUj.es-BR7NA72M.js  url-CG6tK4DD.es-BIjOxLVk.js
src/frontend/src/: App.vue  main.ts
src/frontend/src/assets/: base.css  main.css  spinkit.css
src/frontend/src/components/: CalendarComponent.vue  EventTooltip.vue  UploadComponent.vue
src/frontend/src/models/: index.ts
src/frontend/src/router/: index.ts
src/frontend/src/stores/: eventStore.ts  fileStore.ts
src/frontend/src/views/: CalendarView.vue  DocumentView.vue
