[project]
name = "date-visualization-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "scarlettblaiddyd",email = "scarlett@void.dev"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.116.0,<0.117.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "dateparser (>=1.2.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
