[tool.poetry]
name = "date-visualization-backend"
version = "0.1.0"
description = ""
authors = ["scarlettblaiddyd <scarlett.blaiddyd@gmail.dev>"]
packages = [{include = "backend", from = "src"}]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = ">=0.116.0,<0.117.0"
python-docx = ">=1.2.0,<2.0.0"
dateparser = ">=1.2.2,<2.0.0"
datefinder = ">=0.7.3,<0.8.0"
spacy = ">=3.8.7,<4.0.0"
uvicorn = "^0.35.0"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
